# task

./: README.md  task.cabal
app/: Date.hs  Main.hs
src/: Bwd.hs  LineCursor.hs  Task.hs  TaskUID.hs  TaskZipper.hs  TextZipper.hs
