cabal-version:      3.0
category:           Languages
build-type:         Simple
name:               task
synopsis:           Application for managing tasks
version:            0.1.0

common defaults
  ghc-options:
    -threaded
    -rtsopts
    -O2
    -Wall
    -Wincomplete-patterns
    -fwrite-ide-info
    -hiedir=.hie         
       
  default-extensions:
    GADTs
    ScopedTypeVariables
    BlockArguments
    LambdaCase
    DerivingVia
    DeriveDataTypeable
    OverloadedStrings
    PatternSynonyms
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    InstanceSigs
    RankNTypes

  build-depends:
      base
    , chronos
    , brick
    , vty
    , text
    , containers
    , lens
    , time
    , text-zipper

executable viewer
  import: defaults

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/

  other-modules:
    Date

  build-depends:
    Core

Library Core
  import: defaults

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    src/

  exposed-modules:
      Task
      TaskUID
      TaskZipper
      Bwd
      LineCursor
      

  default-language:
    Haskell2010


test-suite test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/

  build-depends:
      Core
    , base
    , QuickCheck
        ^>= 2.13.2
    , tasty
        ^>= 1.2.3
    , tasty-hunit
        ^>= 0.10
    , tasty-quickcheck
        ^>= 0.10
    , text
        ^>=1.2.3
